[tool.poetry]
name = "bitcoin_message_tool"
version = "0.1.4"
description = "Bitcoin message signing/verification tool"
authors = ["shadowy-pycoder <shadowy-pycoder@example.com>"]
readme = "README.md"
packages = [{include = "bitcoin_message_tool"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
ripemd-hash = "^1.0.0"
base58 = "^2.1.1"
bech32 = "^1.2.0"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[tool.poetry.scripts]
bmt = "bitcoin_message_tool.bmt:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/shadowy-pycoder/bitcoin_message_tool"
"Bug Tracker" = "https://github.com/shadowy-pycoder/bitcoin_message_tool/issues"

[tool.mypy]
python_version = "3.11"
cache_dir = ".mypy_cache/strict"
allow_redefinition = false
strict_optional = false
show_error_codes = true
show_column_numbers = true
warn_no_return = true
disallow_any_unimported = false
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = false
implicit_reexport = false
strict_equality = true
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
